--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -1,68 +1,19 @@
-/*
-Syntax error: Invalid US-ASCII character
-        on line 10 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/fragments/_grid.scss
-        from line 9 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/_reference.scss
-        from line 2 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass/main.scss
-
-Backtrace:
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/fragments/_grid.scss:10
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/_reference.scss:9
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass/main.scss:2
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:373:in `check_encoding!'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/util.rb:604:in `check_encoding'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/util.rb:601:in `check_encoding'
-org/jruby/RubyArray.java:1613:in `each'
-org/jruby/RubyEnumerable.java:978:in `each_with_index'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/util.rb:599:in `check_encoding'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/util.rb:653:in `check_sass_encoding'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:372:in `check_encoding!'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:339:in `_to_tree'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:272:in `to_tree'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:225:in `visit_import'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:227:in `visit_import'
-org/jruby/RubyArray.java:2409:in `map'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:227:in `visit_import'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-org/jruby/RubyArray.java:2409:in `map'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:53:in `visit_children'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:109:in `visit_children'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:128:in `visit_root'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/base.rb:37:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:100:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/visitors/perform.rb:7:in `visit'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/tree/root_node.rb:20:in `render'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:315:in `_render'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/sass-3.2.10/lib/sass/engine.rb:262:in `render'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:136:in `compile'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:122:in `timed'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:135:in `compile'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/logger.rb:45:in `red'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:134:in `compile'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:114:in `compile_if_required'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:99:in `run'
-org/jruby/RubyArray.java:1613:in `each'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:97:in `run'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:122:in `timed'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/compiler.rb:96:in `run'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/commands/update_project.rb:37:in `perform'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/commands/base.rb:18:in `execute'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/commands/project_base.rb:19:in `execute'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/bin/compass:25:in `(root)'
-org/jruby/RubyProc.java:271:in `call'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/gems/compass-0.11.7/bin/compass:39:in `(root)'
-org/jruby/RubyKernel.java:1099:in `load'
-/Projects/OpenHMIS/openmrs-module-patient-list/omod/target/rubygems/bin/compass:23:in `(root)'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Invalid US-ASCII character\A         on line 10 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/fragments/_grid.scss\A         from line 9 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass-external/uicommons-scss/_reference.scss\A         from line 2 of /Projects/OpenHMIS/openmrs-module-patient-list/omod/src/main/compass/sass/main.scss"; }
+fieldset.nested{
+  width:100%;
+}
+fieldset.patientList{
+  width: 100%;
+  margin: 10px 0px;
+  border: 1px solid #666666;
+}
+fieldset.patientList select{
+  width: 100%;
+}
+ul.table-layout .gray-button{
+  background: #666666;
+  border-color: #666666;
+  color: white;
+}
+ul.table-layout{
+  margin: 0px;
+}
