Redesign Patient List UI

--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -29,3 +29,9 @@ table.manage-condition-table th:first-child, td:first-child{
 table.manage-condition-table th, td{
   width: 40%;
 }
+.main-content .status-container{
+  margin: 5px 6px !important;
+}
+.capitalize {
+  text-transform: capitalize;
+}
