--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -18,17 +18,18 @@ ul.table-layout{
   margin: 0px;
 }
 
-table.manage-condition-table{
+table #manage_condition-table{
   table-layout: fixed;
 }
 
-table.manage-condition-table th:first-child, td:first-child{
+table #manage_condition-table th:first-child, td:first-child{
+  width: 100%;
+}
+
+table #manage_condition-table th, td{
   width: 40%;
 }
 
-table.manage-condition-table th, td{
-  width: 40%;
-}
 .main-content .status-container{
   margin: 5px 6px !important;
 }
