--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -36,3 +36,15 @@ table #manage_condition-table th, td{
 .capitalize {
   text-transform: capitalize;
 }
+fieldset.nested{
+  width:100%;
+}
+
+.legendHeader legend {
+    font-size: 16px;
+    width: 190px;
+    color: #00463f;
+    text-transform: none;
+    font-weight: bold;
+    margin-bottom: 0px;
+}
