--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -48,3 +48,38 @@ fieldset.nested{
     font-weight: bold;
     margin-bottom: 0px;
 }
+.btn-align{
+    margin: 5px 13px 0px 0px;
+}
+.dropdown-width{
+    width: 565px;
+}
+.dropdown-margin{
+    margin: 3px -532px 0 !important;
+}
+p.wrap{
+    word-wrap: break-word;
+    white-space: initial;
+}
+ul.overflow{
+    overflow: auto;
+}
+ul.overflow-height{
+    height: 1000%;
+}
+li.no-height{
+    height: initial;
+}
+.trash{
+    width:200px;
+    height: 200px;
+}
+.recent-lozenge {
+    display: inline-block;
+    vertical-align: text-bottom;
+    font-size: 0.7em;
+    border: 1px solid #51a351;
+    color: #51a351;
+    padding: 1px 2px;
+    border-radius: 4px;
+}
