Patient list Unit Tests + minor UI fixes

--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -17,8 +17,12 @@ ul.table-layout .gray-button{
 ul.table-layout{
   margin: 0px;
 }
-
-
+.live-preview{
+    margin: 445px;
+}
+.empty-patient-list{
+    margin: 200px;
+}
 .main-content .status-container{
   margin: 5px 6px !important;
 }
