Sorting out the date picker on the between dates

--- a/omod/src/main/webapp/resources/styles/entity.css
+++ b/omod/src/main/webapp/resources/styles/entity.css
@@ -96,3 +96,12 @@ li.no-height{
 #betweenDateOne-display{
     width: 40%;
 }
+#betweenDateTwo-display{
+    width: 40%;
+}
+#betweenDateOne-wrapper{
+    width:40%;
+}
+#betweenDateTwo-wrapper{
+    width:40%;
+}
